--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --primario: #ff9300;
     --secundario: #0097A7;
     --gris: #757575;
+    --grisClaro: #DFE9F3;
 }
 
 /*Globales*/
@@ -19,6 +20,46 @@ html{
 body{
     font-size: 16px;/*1 rem = 10px*/
     font-family:'Roboto Slab', serif;
+    background-image: linear-gradient(to top,var(--grisClaro) 0%, var(--blanco) 100%) ; 
+}
+
+.sombra{
+    /*Css Matic pag para generar gradientes y sombras*/
+    box-shadow: 0px 5px 15px 0px rgba(115,111,115,0.49);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 2rem;
+}
+
+.contenedor{
+    max-width: 120rem;
+    margin: 0 auto;
+}
+
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+    border: none;
+    margin-top: 1rem;
+}
+
+@media (min-width: 768px) {
+    .boton{
+        width: auto;
+    }
+}
+
+.boton:hover{
+    cursor: pointer;
 }
 
 /*Tipografia*/
@@ -42,36 +83,30 @@ h1,h2,h3{
     font-size: 2rem; 
 }
 
+/*Utilidades*/
+.w-sm-100{
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    w-sm-100{
+        width: auto;
+    }
+}
+
+.flex{
+    display: flex;
+}
+
+.alinear-derecha{
+    justify-content: flex-end;
+}
 /*Navegacion principal*/
 
 .nav-bg{
     background-color: var(--secundario);
 }
 
-.contenedor{
-    max-width: 120rem;
-    margin: 0 auto;
-}
-
-.boton{
-    background-color: var(--secundario);
-    color: var(--blanco);
-    padding: 1rem 3rem;
-    margin-top: 1rem;
-    font-size: 2rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-radius: .5rem;
-    width: 90%;
-    text-align: center;
-}
-
-@media (min-width: 768px) {
-    .boton{
-        width: auto;
-    }
-}
 
 .navegacion-principal{
     display: flex;/*Los elementos de adentro se direcciona de izquierda a derecha*/
@@ -108,6 +143,7 @@ h1,h2,h3{
     background-size: cover; /*Que cubra todo el ancho*/
     height: 450px;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .contenido-hero{
@@ -132,4 +168,116 @@ h1,h2,h3{
     display: flex;
     align-items:flex-end;
 }
+
+/*Servicios*/
+@media (min-width: 768px) {
+    .servicios{
+        display: grid;
+        /* grid: 200px 800px / 300px 300px Ejemplo de como definir tamaño de filas y despues tamaño de columnas*/
+        grid-template-columns: repeat(3, 1fr); /*fr son fracciones y ahi esta definiendo 3 columnas*/
+        column-gap: 1rem;/*Para separar las columnas*/
+    }
+}
+
+.servicio{
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+
+.servicio h3{
+    color: var(--secundario);
+    font-weight: normal;
+}
+
+.servicio p{
+    line-height: 2;/*Interlineado*/
+    text-align: center;
+}
+.servicio .icono{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%; /*Si le pones 50% es un circulo exacto*/
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/*Contacto*/
+.formulario{
+    background-color: var(--gris);
+    width: min(90rem,100%);/*Utilizar el valor mas pequeño*/
+    margin: 0 auto;/*Para centrar cuando el padre no es display flex, este tiene display block*/
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset{/*Los que vienen por defecto el borde*/
+    border: none;
+}
+
+.formulario legend{ /*Titulo del formulario*/
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+.contenedor-campos{
+    display: grid;
+}
+
+@media (min-width: 768px) {
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns:50% 50%;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+
+    .campo:nth-child(3),
+    .campo:nth-child(4){/*Si hay 4 que se llamen igual entonces selecciona el n de los parentesis*/
+        grid-column: 1 / 3; /*Para ubicar al elemento, que vaya desde colum 1 a 3*/
+    }
+    
+    
+}
+
+
+.campo{
+    margin-bottom: 1rem;
+}
+
+.campo label{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block; /*Toma todo el espacio que hay disponible*/
+}
+
+.campo textarea{
+    height: 20rem;
+}
+
+.input-text{
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+/* Para cambiar un tipo especifico de input:
+.campo input[type ="text"],
+.campo input[type="tel"]{
+    background-color: red;
+}
+*/
+
+
+
+
+
 
